[gd_scene load_steps=14 format=2]

[ext_resource path="res://resorces/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/shoot.gd" type="Script" id=3]
[ext_resource path="res://resorces/text.tres" type="DynamicFont" id=4]
[ext_resource path="res://resorces/sounds/player_fire.wav" type="AudioStream" id=5]
[ext_resource path="res://resorces/sounds/walk.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.28192, 0.897181 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.29352
height = 2.97962

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 355 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 357 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 355, 356 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 0.835084

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 56, 40 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 14
script = ExtResource( 2 )

[node name="feet" type="CollisionShape2D" parent="."]
position = Vector2( -0.338707, 4.26073 )
shape = SubResource( 1 )

[node name="body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.329613, -1.21667 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.520279, -1.78381 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 355

[node name="gun" type="Sprite" parent="."]
position = Vector2( 7.74648, -0.502784 )
scale = Vector2( 0.535961, 0.411585 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 469

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.35, 0.35 )

[node name="shoot" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot"]
position = Vector2( 0.0208549, 0.0208569 )
shape = SubResource( 6 )
disabled = true

[node name="gui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crown" type="Sprite" parent="gui"]
visible = false
position = Vector2( -0.389767, -4.60345 )
scale = Vector2( 0.376276, 0.376276 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 140

[node name="light" type="Sprite" parent="gui"]
visible = false
position = Vector2( -167.145, 92.7103 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 723

[node name="gloves" type="Sprite" parent="gui"]
visible = false
position = Vector2( -151.29, 92.7103 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 41

[node name="gnades" type="Sprite" parent="gui"]
visible = false
position = Vector2( -131.647, 93.2715 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 992

[node name="blue" type="Sprite" parent="gui"]
visible = false
position = Vector2( 134.564, 92.7103 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 513

[node name="red" type="Sprite" parent="gui"]
visible = false
position = Vector2( 149.721, 92.7103 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 514

[node name="yellow" type="Sprite" parent="gui"]
visible = false
position = Vector2( 165.164, 92.7103 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 512

[node name="hp" type="Sprite" parent="gui"]
position = Vector2( -167.46, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 520

[node name="hp2" type="Sprite" parent="gui"]
position = Vector2( -149.821, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 520

[node name="hp3" type="Sprite" parent="gui"]
position = Vector2( -132.863, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 520

[node name="heart" type="Sprite" parent="gui"]
visible = false
position = Vector2( -167.46, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 519

[node name="heart2" type="Sprite" parent="gui"]
visible = false
position = Vector2( -149.821, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 519

[node name="heart3" type="Sprite" parent="gui"]
visible = false
position = Vector2( -132.863, -93.7581 )
texture = ExtResource( 1 )
vframes = 22
hframes = 48
frame = 519

[node name="warning" type="Label" parent="gui"]
visible = false
margin_left = -112.0
margin_top = -48.0
margin_right = 115.0
margin_bottom = -17.0
custom_fonts/font = ExtResource( 4 )
text = "warning: castle unstable 
collapsing in 240 seconds"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_timer" type="Timer" parent="gui/warning"]
wait_time = 2.0
one_shot = true

[node name="invic" type="Timer" parent="."]
one_shot = true

[node name="light" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="light"]
shape = SubResource( 7 )

[node name="sound_maker" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="sound_maker2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="can_jump" type="Timer" parent="."]
wait_time = 0.15
[connection signal="timeout" from="gui/warning/start_timer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="invic" to="." method="_on_invic_timeout"]
[connection signal="area_entered" from="light" to="." method="_on_light_area_entered"]
[connection signal="finished" from="sound_maker2" to="." method="_on_sound_maker2_finished"]
[connection signal="timeout" from="can_jump" to="." method="_on_can_jump_timeout"]
